# manipulator_kinematics

./: .gitignore  1X-Take_Home_Challenge_Design_Documentation.txt  CMakeLists.txt  README.md
config/: robot_config.yaml
design/: architecture.uml
include/manipulator_kinematics/: circular_workspace.hpp  ee_state.h  ee_state.hpp  forward_kinematics.h  forward_kinematics.hpp  inverse_kinematics.h  inverse_kinematics.hpp  joint_state.h  joint_state.hpp  robot_config.h  robot_config.hpp  workspace.h  workspace.hpp
src/: CMakeLists.txt  circular_workspace.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  joint_state.cpp  robot_config.cpp  workspace.cpp
tests/: CMakeLists.txt  fk_test.cpp  ik_test.cpp  robot_config_test.cpp  ws_test.cpp
tests/data/: test_robot_config_2R.yaml  test_robot_config_3R.yaml
